--- a/index.html
+++ b/index.html
@@ -212,16 +212,16 @@
 				<h2 class="main-about__title">Расскажите о себе словами</h2>
 				<p class="main-about__description">Напишите пару предложений, чем вас привлекла наша вакансия и чего вы ожидаете от работы в CSSSR. Кстати, будет здорово, если при нехватке места для текста строки будут добавляться автоматически.</p>
 				<form class="main-about__form about-form" method="post" action="#">
-					<textarea class="about-form__textarea" rows="1" name="about-me" placeholder="Расскажите о себе">
-
-					</textarea>
+					<div class="about-form__tech" id="tech">
+						<textarea class="about-form__textarea" rows="1" id="textarea"></textarea>
+					</div>
 					<button class="about-form__submit visually-hidden" type="submit">Сохранить</button>
 				</form>
 			</section>
 			<!--Блок информации о планах-->
 			<section class="main__plans main-plans">
 				<h2 class="main-plans__title">Какие у вас планы на будущее?</h2>
-				<p class="main-plans__description">Этот ответ ни на что не влияет. Не беда, если в будущем ваши планы поменяются.</p>
+				<p class="main-plans__description">Этот ответ ни на что не повлияет. Не беда, если в будущем ваши планы поменяются.</p>
 				<form class="main-plans__form plans-form" method="post" action="#">
 					<ul class="plans-form__list plans-list">
 						<li class="plans-list__item plans-item plans-list__item--develop">
@@ -229,7 +229,7 @@
 							<label class="plans-item__label" for="dev">Верстать</label>
 						</li>
 						<li class="plans-list__item plans-item plans-list__item--js">
-							<input class="plans-item__input visually-hidden" type="radio" name="plan" value="js" id="js" />
+							<input class="plans-item__input visually-hidden" type="radio" name="plan" value="js" id="js" checked />
 							<label class="plans-item__label" for="js">Прокачиваться в JS</label>
 						</li>
 						<li class="plans-list__item plans-item plans-list__item--manager">
@@ -247,11 +247,11 @@
 		<!--Footer-->
 		<footer class="footer">
 			<!--Блок даты-->
-			<section class="footer__date footer-date">
-				<h2 class="footer-date__title visually-hidden">Введите дату заполнения дела</h2>
-				<form class="footer-date__form date-form" method="post" action="#">
-					<label class="date-form__label" for="date">Дата заполнения</label>
-					<input class="date-form__input" type="date" name="date" id="date" value="2019-01-17" disabled/>
+			<section class="footer__date">
+				<h2 class="footer__title visually-hidden">Введите дату заполнения дела</h2>
+				<form class="footer__form footer-form" method="post" action="#">
+					<label class="footer-form__label" for="date">Дата&nbsp;заполнения</label>
+					<input class="footer-form__input" type="date" name="date" id="date" value="2019-01-17" disabled/>
 				</form>
 			</section>
 		</footer>
