--- a/index.html
+++ b/index.html
@@ -212,9 +212,7 @@
 				<h2 class="main-about__title">Расскажите о себе словами</h2>
 				<p class="main-about__description">Напишите пару предложений, чем вас привлекла наша вакансия и чего вы ожидаете от работы в CSSSR. Кстати, будет здорово, если при нехватке места для текста строки будут добавляться автоматически.</p>
 				<form class="main-about__form about-form" method="post" action="#">
-					<div class="about-form__tech" id="tech">
-						<textarea class="about-form__textarea" rows="1" id="textarea"></textarea>
-					</div>
+					<div class="about-form__tech"><textarea class="about-form__textarea" id="textarea"></textarea></div>
 					<button class="about-form__submit visually-hidden" type="submit">Сохранить</button>
 				</form>
 			</section>
