--- a/index.html
+++ b/index.html
@@ -77,37 +77,37 @@
 							<ul class="tech-item__list inner-list">
 								<!--BEM-->
 								<li class="inner-list__item inner-item">
-									<input class="inner-item__input inner-item__input--bem visually-hidden" type="checkbox" name="bem" id="bem" checked disabled/>
+									<input class="inner-item__input inner-item__input--bem visually-hidden" type="checkbox" name="bem" id="bem" checked />
 									<label class="inner-item__label" for="bem">БЭМ/OOCSS</label>
 								</li>
 								<!--PUG(Jade)-->
 								<li class="inner-list__item inner-item">
-									<input class="inner-item__input inner-item__input--pug visually-hidden" type="checkbox" name="pug" id="pug" disabled />
+									<input class="inner-item__input inner-item__input--pug visually-hidden" type="checkbox" name="pug" id="pug" />
 									<label class="inner-item__label" for="pug">Pug&nbsp;(Jade)</label>
 								</li>
 								<!--Stylus/LESS/SASS-->
 								<li class="inner-list__item inner-item">
-									<input class="inner-item__input inner-item__input--preproc visually-hidden" type="checkbox" name="preproc" id="preproc" checked disabled />
+									<input class="inner-item__input inner-item__input--preproc visually-hidden" type="checkbox" name="preproc" id="preproc" checked />
 									<label class="inner-item__label" for="preproc">Stylus/LESS/SASS</label>
 								</li>
 								<!--SVG-->
 								<li class="inner-list__item inner-item">
-									<input class="inner-item__input inner-item__input--svg visually-hidden" type="checkbox" name="svg" id="svg" checked disabled />
+									<input class="inner-item__input inner-item__input--svg visually-hidden" type="checkbox" name="svg" id="svg" checked />
 									<label class="inner-item__label" for="svg">Работаю с SVG</label>
 								</li>
 								<!--Semantics-->
 								<li class="inner-list__item inner-item">
-									<input class="inner-item__input inner-item__input--semantics visually-hidden" type="checkbox" name="semantics" id="semantics" checked disabled/>
+									<input class="inner-item__input inner-item__input--semantics visually-hidden" type="checkbox" name="semantics" id="semantics" checked/>
 									<label class="inner-item__label" for="semantics">Верстаю семантично</label>
 								</li>
 								<!--Accessibility-->
 								<li class="inner-list__item inner-item">
-									<input class="inner-item__input inner-item__input--access visually-hidden" type="checkbox" name="access" id="access" checked disabled />
+									<input class="inner-item__input inner-item__input--access visually-hidden" type="checkbox" name="access" id="access" checked />
 									<label class="inner-item__label" for="access">Accessibility(A11Y)</label>
 								</li>
 								<!--ES2015/ES2016-->
 								<li class="inner-list__item inner-item">
-									<input class="inner-item__input inner-item__input--es visually-hidden" type="checkbox" name="es" id="es" disabled />
+									<input class="inner-item__input inner-item__input--es visually-hidden" type="checkbox" name="es" id="es" />
 									<label class="inner-item__label" for="es">ES2015/ES2016</label>
 								</li>
 							</ul>
@@ -117,37 +117,37 @@
 							<ul class="tech-item__list inner-list">
 								<!--Сборщик-->
 								<li class="inner-list__item inner-item">
-									<input class="inner-item__input inner-item__input--gulp visually-hidden" type="checkbox" name="gulp" id="gulp" checked disabled />
+									<input class="inner-item__input inner-item__input--gulp visually-hidden" type="checkbox" name="gulp" id="gulp" checked />
 									<label class="inner-item__label" for="gulp">Gulp/GRUNT</label>
 								</li>
 								<!--Webpack-->
 								<li class="inner-list__item inner-item">
-									<input class="inner-item__input inner-item__input--webp visually-hidden" type="checkbox" name="webp" id="webp" disabled />
+									<input class="inner-item__input inner-item__input--webp visually-hidden" type="checkbox" name="webp" id="webp" />
 									<label class="inner-item__label" for="webp">Webpack</label>
 								</li>
 								<!--WebGL-->
 								<li class="inner-list__item inner-item">
-									<input class="inner-item__input inner-item__input--webgl visually-hidden" type="checkbox" name="webgl" id="webgl" disabled />
+									<input class="inner-item__input inner-item__input--webgl visually-hidden" type="checkbox" name="webgl" id="webgl" />
 									<label class="inner-item__label" for="webgl">Дружу с WebGL</label>
 								</li>
 								<!--jQuery-->
 								<li class="inner-list__item inner-item">
-									<input class="inner-item__input inner-item__input--jquery visually-hidden" type="checkbox" name="jquery" id="jquery" checked disabled />
+									<input class="inner-item__input inner-item__input--jquery visually-hidden" type="checkbox" name="jquery" id="jquery" checked />
 									<label class="inner-item__label" for="jquery">jQuery</label>
 								</li>
 								<!--Angular-->
 								<li class="inner-list__item inner-item">
-									<input class="inner-item__input inner-item__input--angular visually-hidden" type="checkbox" name="angular" id="angular" disabled />
+									<input class="inner-item__input inner-item__input--angular visually-hidden" type="checkbox" name="angular" id="angular" />
 									<label class="inner-item__label" for="angular">Знаю/изучаю Angular</label>
 								</li>
 								<!--React-->
 								<li class="inner-list__item inner-item">
-									<input class="inner-item__input inner-item__input--react visually-hidden" type="checkbox" name="react" id="react" disabled />
+									<input class="inner-item__input inner-item__input--react visually-hidden" type="checkbox" name="react" id="react" />
 									<label class="inner-item__label" for="react">Знаю/изучаю React</label>
 								</li>
 								<!--Node.js-->
 								<li class="inner-list__item inner-item">
-									<input class="inner-item__input inner-item__input--node visually-hidden" type="checkbox" name="node" id="node" disabled />
+									<input class="inner-item__input inner-item__input--node visually-hidden" type="checkbox" name="node" id="node" />
 									<label class="inner-item__label" for="node">Знаю/изучаю Node.js</label>
 								</li>
 							</ul>
@@ -157,27 +157,27 @@
 							<ul class="tech-item__list inner-list">
 								<!--Git-->
 								<li class="inner-list__item inner-item">
-									<input class="inner-item__input inner-item__input--git visually-hidden" type="checkbox" name="git" id="git" checked disabled />
+									<input class="inner-item__input inner-item__input--git visually-hidden" type="checkbox" name="git" id="git" checked />
 									<label class="inner-item__label" for="git">Использую Git</label>
 								</li>
 								<!--Eyes-->
 								<li class="inner-list__item inner-item">
-									<input class="inner-item__input inner-item__input--eyes visually-hidden" type="checkbox" name="eyes" id="eyes" checked disabled />
+									<input class="inner-item__input inner-item__input--eyes visually-hidden" type="checkbox" name="eyes" id="eyes" checked />
 									<label class="inner-item__label inner-item__label--eyes" for="eyes">С <span class="inner-item__text--first">глазомером</span>&nbsp;<span class="inner-item__text--second">всё</span>&nbsp;<span class="inner-item__text--third">ок</span></label>
 								</li>
 								<!--Reading-->
 								<li class="inner-list__item inner-item">
-									<input class="inner-item__input inner-item__input--blog visually-hidden" type="checkbox" name="blog" id="blog" checked disabled />
+									<input class="inner-item__input inner-item__input--blog visually-hidden" type="checkbox" name="blog" id="blog" checked />
 									<label class="inner-item__label" for="blog">Читаю&nbsp;<a class="inner-item__link" href="http://blog.csssr.ru/">blog.csssr.ru</a></label>
 								</li>
 								<!--Lazyness-->
 								<li class="inner-list__item inner-item">
-									<input class="inner-item__input inner-item__input--lazy visually-hidden" type="checkbox" name="lazy" id="lazy" disabled />
+									<input class="inner-item__input inner-item__input--lazy visually-hidden" type="checkbox" name="lazy" id="lazy" />
 									<label class="inner-item__label" for="lazy">Я ленивый(-ая)</label>
 								</li>
 								<!--English-->
 								<li class="inner-list__item inner-item">
-									<input class="inner-item__input inner-item__input--eng visually-hidden" type="checkbox" name="eng" id="eng" checked disabled />
+									<input class="inner-item__input inner-item__input--eng visually-hidden" type="checkbox" name="eng" id="eng" checked />
 									<label class="inner-item__label" for="eng">У меня хороший английский</label>
 								</li>
 							</ul>
@@ -212,7 +212,7 @@
 				<h2 class="main-about__title">Расскажите о себе словами</h2>
 				<p class="main-about__description">Напишите пару предложений, чем вас привлекла наша вакансия и чего вы ожидаете от работы в CSSSR. Кстати, будет здорово, если при нехватке места для текста строки будут добавляться автоматически.</p>
 				<form class="main-about__form about-form" method="post" action="#">
-					<div class="about-form__tech"><textarea class="about-form__textarea" id="textarea" rows="2"></textarea></div>
+					<div class="about-form__tech"><textarea class="about-form__textarea" id="textarea" rows="2">Всем привет, меня зовут Артур. Вакансия в CSSSR привлекла меня концепцией работы и стеком технологий + очень заинтересовала система сборки проектов от CSSSR. Хочется работать удаленно, развиваться по всем фронтам, участвовать в хороших проектах. В задании, вроде бы, удалось предусмотреть всё, на мой скромный взгляд, но пределу совершенства нет. P.S: пункто про глазомер не совсем понял, реализовал так, как показалось нужным и по макету.</textarea></div>
 					<button class="about-form__submit visually-hidden" type="submit">Сохранить</button>
 				</form>
 			</section>
@@ -249,7 +249,7 @@
 				<h2 class="footer__title visually-hidden">Введите дату заполнения дела</h2>
 				<form class="footer__form footer-form" method="post" action="#">
 					<label class="footer-form__label" for="date">Дата&nbsp;заполнения</label>
-					<input class="footer-form__input" type="date" name="date" id="date" value="2019-01-17" disabled/>
+					<input class="footer-form__input" type="date" name="date" id="date" value="2019-01-19" disabled/>
 				</form>
 			</section>
 		</footer>
